--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,25 @@
 **/__pycache__/
 **/.ipynb_checkpoints/
 
+# Packaging
+*.egg
+*.egg-info
+build
+eggs
+.eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
 # Development tooling
+.cache
+.pytest_cache
+.coverage
+.tox
 tags
+htmlcov/
