--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+apipkg==1.4
 astroid==1.6.5
 atomicwrites==1.1.5
 attrs==18.1.0
@@ -5,9 +6,11 @@ backcall==0.1.0
 bleach==2.1.3
 certifi==2018.4.16
 chardet==3.0.4
+coverage==4.5.1
 cycler==0.10.0
 decorator==4.3.0
 entrypoints==0.2.3
+execnet==1.5.0
 html5lib==1.0.1
 idna==2.7
 ipykernel==4.8.2
@@ -47,6 +50,9 @@ Pygments==2.2.0
 pylint==1.9.2
 pyparsing==2.2.0
 pytest==3.6.1
+pytest-cov==2.5.1
+pytest-forked==0.2
+pytest-xdist==1.22.2
 python-dateutil==2.7.3
 pytz==2018.4
 pyzmq==17.0.0
